fix build. add closing Chat Bar Animation

--- a/common/src/main/resources/assets/chatimpressiveanimation/lang/en_ud.json
+++ b/common/src/main/resources/assets/chatimpressiveanimation/lang/en_ud.json
@@ -4,6 +4,6 @@
 
 	"text.autoconfig.chatimpressiveanimation.title": "uoı̣ʇɐɯı̣uⱯ ǝʌı̣ssǝɹdɯI ʇɐɥƆ",
 	"text.autoconfig.chatimpressiveanimation.option.enableChatSendingAnimation": "uoı̣ʇɐɯı̣uɐ ƃuı̣puǝs ǝƃɐssǝɯ ǝןqɐuƎ",
-	"text.autoconfig.chatimpressiveanimation.option.enableOpenChatAnimation": "uoı̣ʇɐɯı̣uɐ ʇɐɥɔ uǝdo ǝןqɐuƎ",
+	"text.autoconfig.chatimpressiveanimation.option.enableChatBarAnimation": "ƃuı̣soןɔ puɐ ƃuı̣uǝdo uǝɥʍ suoı̣ʇɐɯı̣uɐ ɹɐq ʇɐɥɔ ǝןqɐuƎ",
 	"text.autoconfig.chatimpressiveanimation.option.removeMessageIndicator": "ɹoʇɐɔı̣puı̣ ǝƃɐssǝɯ ǝɥʇ sǝʌoɯǝꓤ"
 }
