--- a/common/src/main/resources/assets/chatimpressiveanimation/lang/en_ud.json
+++ b/common/src/main/resources/assets/chatimpressiveanimation/lang/en_ud.json
@@ -1,4 +1,6 @@
 {
+	"fml.menu.mods.info.displayname.chatimpressiveanimation": "uoı̣ʇɐɯı̣uⱯ ǝʌı̣ssǝɹdɯI ʇɐɥƆ",
+	"fml.menu.mods.info.description.chatimpressiveanimation": "˙ɹoʇɐɔı̣puı̣ ǝƃɐssǝɯ ǝɥʇ sǝʌoɯǝɹ osןɐ ʇI ˙sǝƃɐssǝɯ ƃuı̣puǝs 'ʇɐɥɔ ƃuı̣uǝdo sɐ ɥɔnS ˙suoı̣ʇɐɯı̣uɐ ƃuı̣ppɐ ʎq ɹǝʇʇǝq ʞooן ʇɐɥɔ ǝɥʇ sǝʞɐɯ poɯ sı̣ɥꓕ",
 	"modmenu.nameTranslation.chatimpressiveanimation": "uoı̣ʇɐɯı̣uⱯ ǝʌı̣ssǝɹdɯI ʇɐɥƆ",
 	"modmenu.descriptionTranslation.chatimpressiveanimation": "˙ɹoʇɐɔı̣puı̣ ǝƃɐssǝɯ ǝɥʇ sǝʌoɯǝɹ osןɐ ʇI ˙sǝƃɐssǝɯ ƃuı̣puǝs 'ʇɐɥɔ ƃuı̣uǝdo sɐ ɥɔnS ˙suoı̣ʇɐɯı̣uɐ ƃuı̣ppɐ ʎq ɹǝʇʇǝq ʞooן ʇɐɥɔ ǝɥʇ sǝʞɐɯ poɯ sı̣ɥꓕ",
 
