--- a/common/src/main/resources/assets/chatimpressiveanimation/lang/en_us.json
+++ b/common/src/main/resources/assets/chatimpressiveanimation/lang/en_us.json
@@ -1,4 +1,6 @@
 {
+	"fml.menu.mods.info.displayname.chatimpressiveanimation": "Chat Impressive Animation",
+	"fml.menu.mods.info.description.chatimpressiveanimation": "This mod makes the chat look better by adding animations. Such as opening chat, sending messages. It also removes the message indicator.",
 	"modmenu.nameTranslation.chatimpressiveanimation": "Chat Impressive Animation",
 	"modmenu.descriptionTranslation.chatimpressiveanimation": "This mod makes the chat look better by adding animations. Such as opening chat, sending messages. It also removes the message indicator.",
 
