--- a/common/src/main/resources/assets/chatimpressiveanimation/lang/zh_tw.json
+++ b/common/src/main/resources/assets/chatimpressiveanimation/lang/zh_tw.json
@@ -1,4 +1,6 @@
 {
+	"fml.menu.mods.info.displayname.chatimpressiveanimation": "聊動魅影",
+	"fml.menu.mods.info.description.chatimpressiveanimation": "添加了一些關於聊天欄的動畫，如打開聊天欄，發送消息等。同時刪除了提示類消息左側的白條",
 	"modmenu.nameTranslation.chatimpressiveanimation": "聊動魅影",
 	"modmenu.descriptionTranslation.chatimpressiveanimation": "添加了一些關於聊天欄的動畫，如打開聊天欄，發送消息等。同時刪除了提示類消息左側的白條",
 
